--- a/djangoapp/pyproject.toml
+++ b/djangoapp/pyproject.toml
@@ -1,11 +1,14 @@
 [tool.poetry]
-name = "django"
-version = "0.1.0"
-description = ""
+name = "djangoapp"
+version = "0.0.1"
+description = "App for intercom interview"
 authors = ["mehernosh <mehernosh@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+django = "2.2.13"
+django-cors-headers = "2.5.3"
+pre-commit = "^2.17.0"
 
 [tool.poetry.dev-dependencies]
 
